--- a/qure_ai_problem_2.ipynb
+++ b/qure_ai_problem_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1XkmpXhBIkw-AlHeAqDGTe30akzbjAPvo",
-      "authorship_tag": "ABX9TyOSTpi53xDXqCtCsuHoq8VL",
+      "authorship_tag": "ABX9TyPtipM4Hud1ppTlyqMG9dK8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## IMPORT REQUIRED LIBRARIES & PROVIDING FILE PATHS"
+      ],
+      "metadata": {
+        "id": "aq7lBLbrsj2E"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -37,20 +46,20 @@
       "metadata": {
         "id": "gtkoL4nO5OIt"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "jHP6RfxO3DU7"
       },
       "outputs": [],
       "source": [
-        "df_energy = pd.read_excel(r'/content/drive/MyDrive/Qure_ai/Energy_Indicators.xls')\n",
-        "df_sciem = pd.read_excel(r'/content/drive/MyDrive/Qure_ai/scimagojr_country_rank_1996-2021.xlsx')\n",
-        "df_gdp = pd.read_csv('/content/drive/MyDrive/Qure_ai/API_NY_GDP_MKTP_CD_DS2_en_csv_v2_4701247.csv', header=2)"
+        "df_energy = pd.read_excel(r'/content/drive/MyDrive/Qure_ai/Question2/Energy_Indicators.xls')\n",
+        "df_sciem = pd.read_excel(r'/content/drive/MyDrive/Qure_ai/Question2/scimagojr_country_rank_1996-2021.xlsx')\n",
+        "df_gdp = pd.read_csv('/content/drive/MyDrive/Qure_ai/Question2/API_NY_GDP_MKTP_CD_DS2_en_csv_v2_4701247.csv', header=2)"
       ]
     },
     {
@@ -65,17 +74,19 @@
     {
       "cell_type": "code",
       "source": [
+        "#### selecting only required columns from the complete dataset\n",
         "df_energy = df_energy.iloc[17:244]"
       ],
       "metadata": {
         "id": "CjUyKvCVQ8s7"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#### renaming column names\n",
         "df_energy = df_energy[[\"Unnamed: 1\",\"Unnamed: 3\", \"Unnamed: 4\", \"Unnamed: 5\" ]]\n",
         "df_energy.rename(columns = {'Unnamed: 1' : 'Country', \n",
         "               'Unnamed: 3' : 'Energy Supply',\n",
@@ -91,6 +102,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#### replacing blanks with nan values and transforming data (cleaning data to suit our requirements)\n",
         "df_energy['Energy Supply'] = df_energy['Energy Supply'].replace(\"...\", np.nan)\n",
         "df_energy['Energy Supply per Capita'] = df_energy['Energy Supply per Capita'].replace(\"...\", np.nan)\n",
         "df_energy['Energy Supply'] = df_energy['Energy Supply'].transform(lambda x: x * 1000000)\n",
@@ -99,12 +111,13 @@
       "metadata": {
         "id": "aN0BaSbgSSX2"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#### renaming country names with new names\n",
         "df_energy['Country'] = df_energy['Country'].replace({'Republic of Korea' : 'South Korea',\n",
         "                                                'United States of America' : \"United States\",\n",
         "                                                'United Kingdom of Great Britain and Northern Ireland' : \"United Kingdom\",\n",
@@ -114,12 +127,13 @@
       "metadata": {
         "id": "zKggg8LSStpW"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#### transforming rows in country column to remove noise\n",
         "df_energy['Country'] = df_energy['Country'].transform(lambda x : re.sub(r'\\([^)]*\\)','', x))\n",
         "df_energy['Country'] = df_energy['Country'].transform(lambda x : ''.join(i for i in x if not i.isdigit()))\n",
         "df_energy['Country'] = df_energy['Country'].transform(lambda x : x.rstrip())"
@@ -127,7 +141,7 @@
       "metadata": {
         "id": "0jMuloP6S7xn"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -142,7 +156,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#### renaming column name to 'country'\n",
         "df_gdp.rename(columns = {'Country Name' : 'Country'}, inplace = True)\n",
+        "#### renaming country names with new names\n",
         "df_gdp['Country'] = df_gdp['Country'].replace({'Korea, Rep.' : \"South Korea\",\n",
         "                                               'Iran, Islamic Rep.' : \"Iran\", \n",
         "                                               'Hong Kong SAR, China' : \"Hong Kong\" })\n",
@@ -151,7 +167,7 @@
       "metadata": {
         "id": "83J-_Zk-T4jW"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -166,12 +182,13 @@
     {
       "cell_type": "code",
       "source": [
+        "#### removing unnecessary columns\n",
         "df_sciem = df_sciem.drop(['Region'], axis=1)"
       ],
       "metadata": {
         "id": "bYsRgtTnUJ7q"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -193,15 +210,8 @@
       "metadata": {
         "id": "vMVv_1f1Uve9"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "WB3z9m9dWqnR"
-      }
     },
     {
       "cell_type": "code",
@@ -212,7 +222,7 @@
       "metadata": {
         "id": "o5JxG3fgVLZ-"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -235,7 +245,7 @@
       "metadata": {
         "id": "8N6mgQWOVYJ8"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -249,9 +259,9 @@
           "height": 736
         },
         "id": "42iyRxcDV47q",
-        "outputId": "a9ed6420-4285-41b6-aee6-b1a000952ebc"
+        "outputId": "d5f4343d-3f12-422b-c5e6-be60683e47ce"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +377,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-908bf68a-958a-40f2-beab-4dffb45cdcbc\">\n",
+              "  <div id=\"df-fa188559-d47a-4d9b-a1db-94c95e644fcd\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -781,7 +791,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-908bf68a-958a-40f2-beab-4dffb45cdcbc')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fa188559-d47a-4d9b-a1db-94c95e644fcd')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -832,12 +842,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-908bf68a-958a-40f2-beab-4dffb45cdcbc button.colab-df-convert');\n",
+              "          document.querySelector('#df-fa188559-d47a-4d9b-a1db-94c95e644fcd button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-908bf68a-958a-40f2-beab-4dffb45cdcbc');\n",
+              "          const element = document.querySelector('#df-fa188559-d47a-4d9b-a1db-94c95e644fcd');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -860,7 +870,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 128
+          "execution_count": 13
         }
       ]
     }
