--- a/qure_ai_problem_1.ipynb
+++ b/qure_ai_problem_1.ipynb
@@ -4,8 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1wzyFUEiKolvQV1IQsMTPvaV4k4ZAoDgP",
-      "authorship_tag": "ABX9TyMtMndfD+/Kfyr3BuUfWM17",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +37,29 @@
     {
       "cell_type": "code",
       "source": [
+        "!git clone https://github.com/AbhiRishi96/qure_ai_problems.git"
+      ],
+      "metadata": {
+        "id": "OloI0W7FJDff",
+        "outputId": "af6bac07-e225-449d-90bc-f2f4400ee054",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'qure_ai_problems' already exists and is not an empty directory.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install pydicom\n",
         "!pip install pylibjpeg-libjpeg\n",
         "!pip install python-gdcm\n",
@@ -49,9 +70,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HBlob4arht4R",
-        "outputId": "6b9dc9d2-c272-4b63-d25d-dfc4cb1b76e5"
+        "outputId": "f18aac2c-3e6d-4356-8f2f-24a34e39115c"
       },
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,20 +113,20 @@
       "metadata": {
         "id": "ryaZnFvN_C-e"
       },
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "source_path = '/qure_ai_problems/Problem_1/assignment_dcms/'\n",
-        "output_path_jpg = '/qure_ai_problems/Problem_1/converted_images/'\n",
-        "output_path_metadata = '/qure_ai_problems/Problem_1/metadata/'"
+        "source_path = '/content/qure_ai_problems/Problem_1/assignment_dcms/'\n",
+        "output_path_jpg = '/content/qure_ai_problems/Problem_1/converted_images/'\n",
+        "output_path_metadata = '/content/qure_ai_problems/Problem_1/metadata/'"
       ],
       "metadata": {
         "id": "CqjyRUjGlazY"
       },
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -126,7 +147,7 @@
       "metadata": {
         "id": "JiwsTDbIh0eZ"
       },
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -152,7 +173,7 @@
       "metadata": {
         "id": "1pRWGc2hiPQK"
       },
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -174,7 +195,7 @@
       "metadata": {
         "id": "755LI_5Jw-0j"
       },
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -201,7 +222,7 @@
       "metadata": {
         "id": "7bXp6DPL4LQr"
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -235,53 +256,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vX-2KhMLw_ry",
-        "outputId": "e3fff15b-4eac-4c33-940e-2118b9f85cfa"
+        "outputId": "88099cd8-bdd9-4fde-eda9-deebcfa23273"
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '00315870.83800121.55893672.15099295.72850224'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '73802409.99613156.32615417.06493256.48176914'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '87906044.70381019.90896247.95734613.08332995'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '69623600.35356994.06234781.74966567.26430135'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '11864124.05973624.07385707.93843262.30833033'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '93260728.81121459.31140456.08836682.40680114'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '32266669.43443768.06864945.35339906.81542399'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '08569335.47847827.66504522.66777998.15377216'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '04363791.49392136.45366070.69930947.06908118'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '36906660.68166702.12536138.89165954.07350390'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '18303965.95761379.07064692.05723792.15744745'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "  warnings.warn(msg)\n",
             "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '00549655.13133668.40240308.01533809.96759950'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n",
             "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '01653294.16050324.26197516.53414655.27366954'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n",
             "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '75302434.00924580.45990863.56777941.87838844'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '87906044.70381019.90896247.95734613.08332995'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '93260728.81121459.31140456.08836682.40680114'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '32266669.43443768.06864945.35339906.81542399'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '00315870.83800121.55893672.15099295.72850224'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '73802409.99613156.32615417.06493256.48176914'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '65502040.52890503.04982095.70571265.19583150'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n",
             "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '26972701.37939238.15724898.01746922.97869176'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n",
             "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '37927481.51201592.38431525.14300394.05627661'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '08569335.47847827.66504522.66777998.15377216'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '11864124.05973624.07385707.93843262.30833033'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '04363791.49392136.45366070.69930947.06908118'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '36906660.68166702.12536138.89165954.07350390'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '65502040.52890503.04982095.70571265.19583150'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
             "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '88038826.02940674.74559620.86342125.01977809'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '69623600.35356994.06234781.74966567.26430135'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-            "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '06677281.91949539.71953122.00853150.10303109'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n",
             "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '64017173.42569595.21008723.28007723.04763893'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '18303965.95761379.07064692.05723792.15744745'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+            "/usr/local/lib/python3.8/dist-packages/pydicom/valuerep.py:290: UserWarning: Invalid value for VR UI: '06677281.91949539.71953122.00853150.10303109'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
             "  warnings.warn(msg)\n"
           ]
         }
